--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <title>レターミラー</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+</head>
 
+<body>
+    <header>
+        <div class="header_contents">
+            <div class="header_main">
+                <h1><img src="img/LetterMirror_Logo.png" width="300" height="200" alt="サイトタイトル"></h1>
+            </div>
+    </header>
+    <div class="header_under">
+        <img class="header_photo" src="img/header.jpg">
+    </div>
+</body>
+</html>
