ロゴの大きさ変更

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="header_contents">
             <div class="header_main">
-                <h1><img src="img/LetterMirror_Logo.png" width="300" height="200" alt="サイトタイトル"></h1>
+                <h1><img class="logo" src="img/LetterMirror_Logo.png" width="150" height="100" alt="サイトタイトル"></h1>
             </div>
     </header>
     <div class="header_under">
